force-app/main/default/objects/Template_Request__c/Template_Request__c.object-meta.xml
<CustomObject>
    <description>Store all request for changes to email templates. Object stores template that agent wants to change and once change gets approved, email template gets updated</description>
    <label>Template Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>