force-app/main/default/objects/Template_Request__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <description>ID of the email template that needs to be modified</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>