force-app/main/default/objects/Template_Request__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>Name of email template that needs to be changed (facilitates the approver&apos;s job in finding correct template in folder)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>