force-app/main/default/objects/Template_Request__c/fields/Is_New_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When se tot true, user requests to create new template. When false, request is for existing template</description>
    <label>Is New Template</label>
    <type>Checkbox</type>
</CustomField>