force-app/main/default/objects/Template_Request__c/listViews/Email_Template_Manager_Template_Request.listView-meta.xml
<ListView>
    <fullName>Email_Template_Manager_Template_Request</fullName>
    <columns>NAME</columns>
    <columns>Email_Template_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Claims - Email Template Manager</label>
    <queue>Email_Template_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>